# witness-checker

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
derive-ir-typed/: Cargo.toml
derive-ir-typed/src/: lib.rs
derive-migrate/: Cargo.toml
derive-migrate/src/: lib.rs
docs/: memory_sparsity.md  public_pc.md
examples/: add-neg-one.yaml  advice-bad-1.yaml  advice-good-1.yaml  cmpg-negative.yaml  cmpg-positive.yaml  code-segments-1.yaml  code-segments-commitment.yaml  code-segments-public-pc.yaml  commitment-1.yaml  commitment-uncommitted.yaml  expect-write-bad-uninit.yaml  expect-write-bad-value.yaml  expect-write-good.yaml  memfold-basic.yaml  memfold-poison-load.yaml  memfold-poison-poison.yaml  memfold-poison-store.yaml  memory-1-bad.yaml  memory-1.yaml  memory-2.yaml  memory-3.yaml  memory-heap-init-bad.yaml  memory-load-partial-1.yaml  memory-misaligned-1.yaml  memory-store-beyond-width-1.yaml  memory-store-partial-1.yaml  multi-exec-bad.yaml  multi-exec-good.yaml  poly-bad-1.yaml  poly-good-1.yaml  poly-prog.txt  poly-trace-bad.txt  poly-trace-good.txt  privilege-levels-1.yaml  public-pc-invalid-fork.yaml  public-pc-invalid-loop.yaml  public-pc-invalid-non-loop-dead-segment.yaml  public-pc-invalid-non-loop.yaml  public-pc-memory-straightline.yaml  public-pc-memory.yaml  (+24 more)
overridable-trait/: Cargo.toml
overridable-trait/src/: lib.rs
scripts/: multi_exec.py  run_scale.py
src/: builder.rs  eval.rs  lib.rs  main.rs  parse.rs  sort.rs  stats.rs  tiny_ram.rs  util.rs
src/back/: mod.rs  scale.rs
src/debug/: count_gates.rs  graphviz.rs  mod.rs
src/gadget/: arith.rs  bit_pack.rs  mod.rs
src/ir/: builder.rs  circuit.rs  migrate.rs  mod.rs  typed.rs
src/lower/: bit_pack.rs  bool_.rs  bundle.rs  const_fold.rs  gadget.rs  int.rs  mod.rs
src/micro_ram/: context.rs  exec.rs  feature.rs  fetch.rs  known_mem.rs  mem.rs  mod.rs  parse.rs  routing.rs  seg_graph.rs  trace.rs  types.rs  witness.rs
src/mode/: if_mode.rs  leak_uninitialized.rs  mod.rs  tainted.rs
src/preprocess/: multi_exec.py
src/routing/: benes.rs  mod.rs  sort.rs
tests/: golden.rs  sieve_ir_mux.rs  zkif_mux.rs  zkif_negative.rs
tests/example_output/: add-neg-one.out  advice-bad-1.out  advice-good-1.out  cmpg-negative.out  cmpg-positive.out  code-segments-commitment.out  code-segments-public-pc.out  expect-write-bad-uninit.out  expect-write-bad-value.out  expect-write-good.out  memfold-basic.out  memfold-poison-load.out  memfold-poison-poison.out  memfold-poison-store.out  memory-1-bad.out  memory-1.out  memory-2.out  memory-3.out  memory-heap-init-bad.out  memory-load-partial-1.out  memory-misaligned-1.out  (+34 more)
(+36 files in other folders)
