[package]
name = "cheesecloth"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale_isa = { path = "../dialogue/scale_isa/scale_isa" }
bumpalo = "3.4"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10"
serde_json = "1"
serde_yaml = "0.8"
