[package]
name = "cheesecloth"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bellman = ["zkinterface", "zkinterface_bellman", "ff"]
sieve_ir = ["ff", "zki_sieve"]

[dependencies]
zkinterface = { optional = true, version = "1.3.3" }
zkinterface_bellman = { optional = true, version = "1.3.0" }
# zki_sieve = { optional = true, git = "https://github.mit.edu/sieve-all/zkinterface-sieve.git", branch = "inline-witness" }
zki_sieve = { optional = true, git = "ssh://git@github.mit.edu/sieve-all/zkinterface-sieve.git", branch = "inline-witness", path = "../zkinterface-sieve/rust" }

# Use the crate ff_derive. The dependencies must be repeated to use in the macro derive(PrimeField).
ff = { optional = true, version = "0.8.0", features = ["derive"] }

bitvec = "0.18"
byteorder = "1"
rand_core = "0.5"
subtle = "2.2.1"

bumpalo = "3.4"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10"
serde_json = "1"
serde_yaml = "0.8"

clap = "2.33"
num-bigint = "0.3.0"
num-traits = "0.2.12"

log = "0.4"
env_logger = "0.7"

[dev-dependencies]
tempfile = "3.1"
goldenfile = "1.1"
