[package]
name = "cheesecloth"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bellman = ["zk-circuit-builder/bellman"]
sieve_ir = ["zk-circuit-builder/sieve_ir"]
gf_scuttlebutt = ["zk-circuit-builder/gf_scuttlebutt"]

[dependencies]
zk-circuit-builder = { path = "deps/zk-circuit-builder", default-features = false, features = ["f128p"] }

# Note: This is an older version of arrayvec, compatible with older Rust
arrayvec = "0.5.2"

serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10"
serde_json = "1"
serde_yaml = "0.8"

clap = "2.33"
num-traits = "0.2.12"

log = "0.4"
env_logger = "0.7"

[dev-dependencies]
goldenfile = "1.1"
